--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <a href="index.html">Общая информация</a>
     </div>
     <div class="nav-element">
+      <a href="catalog.html">Каталог машин</a>
+    </div>
+    <div class="nav-element">
       <a href="models.html">Заводские модификации</a>
     </div>
     <div class="nav-element">
