--- a/interesting_facts.html
+++ b/interesting_facts.html
@@ -31,6 +31,9 @@
       <a href="index.html">Общая информация</a>
     </div>
     <div class="nav-element">
+      <a href="catalog.html">Каталог машин</a>
+    </div>
+    <div class="nav-element">
       <a href="models.html">Заводские модификации</a>
     </div>
     <div class="nav-element">
@@ -100,4 +103,5 @@
 </body>
 <script src="js/login.js"></script>
 <script src="js/navbar.js"></script>
+<script src="js/main.js"></script>
 </html>
