--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
       width: 100%;
     }
   </style>
-  <script src="js/login.js.js"></script>
+  <script src="js/login.js"></script>
 </head>
 <body>
 <div style="
@@ -23,14 +23,20 @@
   <div>
     <h2>Имя</h2><input id="name" type="text"/>
     <p id="wrong name" style="display:none">Неправильное имя</p>
+    <h2>Email</h2><input id="email" type="text"/>
+    <p id="wrong email" style="display:none">Неправильная почта</p>
+    <h2>Телефон</h2><input id="phone" type="text"/>
+    <p id="wrong phone" style="display:none">Неправильный телефон</p>
     <h2>Пароль</h2><input id="password" type="password"/>
     <p id="wrong password" style="display:none">Неправильный пароль</p>
+    <h2>Подтверждение пароля</h2><input id="confirm" type="password"/>
+    <p id="wrong confirm" style="display:none;">Пароли не совпадают</p>
     <div style="display: flex;flex-direction: row;margin-top: 30px;">
-      <button style="width: 50%;text-align: center" onclick="login()"> Send</button>
-      <a style="width: 50%;text-align: center" href="/tsi_kursach/register.html">Регистрация</a>
+      <button style="width: 50%;text-align: center" onclick="register(this)"> Send</button>
+      <a style="width: 50%;text-align: center" href="/tsi_kursach/login.html">Логин</a>
     </div>
   </div>
 </div>
 </body>
-<script src="js/login.js"></script>
+<script src="js/register.js"></script>
 </html>
